[gd_scene load_steps=3 format=3 uid="uid://c3qkr8m2vwy5p"]

[ext_resource type="Script" path="res://scripts/phases/return_journey.gd" id="1_return"]
[ext_resource type="PackedScene" uid="uid://bqxe4r8nwvjsd" path="res://scenes/ui/event_popup.tscn" id="2_popup"]

[node name="ReturnJourney" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_return")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.08, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 50.0
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "RETURN TO EARTH"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DayLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Mission Day: 360"

[node name="ProgressLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Return Day 0 of 180"

[node name="MainContent" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = -60.0
theme_override_constants/separation = 10

[node name="LeftPanel" type="VBoxContainer" parent="MainContent"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ProgressSection" type="Panel" parent="MainContent/LeftPanel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="MainContent/LeftPanel/ProgressSection"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 30.0
text = "Journey Home"
theme_override_font_sizes/font_size = 16

[node name="ProgressBar" type="ProgressBar" parent="MainContent/LeftPanel/ProgressSection"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = 65.0

[node name="ETALabel" type="Label" parent="MainContent/LeftPanel/ProgressSection"]
layout_mode = 1
offset_left = 10.0
offset_top = 70.0
offset_right = 290.0
offset_bottom = 90.0
text = "ETA Earth: 180 days"

[node name="CrewSection" type="Panel" parent="MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainContent/LeftPanel/CrewSection"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
text = "Crew Status"
theme_override_font_sizes/font_size = 16

[node name="CrewContainer" type="VBoxContainer" parent="MainContent/LeftPanel/CrewSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = -10.0

[node name="CenterPanel" type="Panel" parent="MainContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MainContent/CenterPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 30.0
text = "Mission Summary"
theme_override_font_sizes/font_size = 16

[node name="ShipStatus" type="RichTextLabel" parent="MainContent/CenterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true

[node name="RightPanel" type="Panel" parent="MainContent"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MainContent/RightPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
text = "Mission Log"
theme_override_font_sizes/font_size = 16

[node name="EventLog" type="RichTextLabel" parent="MainContent/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true
scroll_following = true

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -10.0
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AdvanceButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "+1 Day"

[node name="AdvanceWeekButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "+7 Days"

[node name="AutoButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
text = "Auto"

[node name="SpeedSlider" type="HSlider" parent="BottomBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 5.0

[node name="SpeedLabel" type="Label" parent="BottomBar"]
layout_mode = 2
text = "5x"

[node name="ReentrySequence" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="ReentrySequence"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="ReentrySequence"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="ReentrySequence/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "EARTH REENTRY"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ReentrySequence/VBox"]
layout_mode = 2

[node name="StatusText" type="RichTextLabel" parent="ReentrySequence/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Preparing for atmospheric entry..."

[node name="ProgressBar" type="ProgressBar" parent="ReentrySequence/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = false

[node name="ContinueButton" type="Button" parent="ReentrySequence/VBox"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Continue"

[node name="EventPopup" parent="." instance=ExtResource("2_popup")]
visible = false
